authentication and authorization

--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,3 @@
-MONGO_URL="mongodb+srv://rian10br:rian789456@cluster.y3howiu.mongodb.net/?retryWrites=true&w=majority"
-PORT=3001
+MONGO_URL=
+JWT_SECRET=
+PORT=
